Create neon admin panel with 20 settings, 20 security, and 20 tools functions

--- a/admin.html
+++ b/admin.html
@@ -343,10 +343,10 @@
             <div class="login-icon">⚛️</div>
             <div class="login-title">Quantum Nexus</div>
             <div class="form-group">
-                <input type="text" id="login" placeholder="Login" autocomplete="username" value="smartfixnsk">
+                <input type="text" id="login" placeholder="Login" autocomplete="username">
             </div>
             <div class="form-group">
-                <input type="password" id="password" placeholder="Password" autocomplete="current-password" value="Maga1996">
+                <input type="password" id="password" placeholder="Password" autocomplete="current-password">
             </div>
             <button class="btn" id="loginBtn" type="button">🚀 Войти</button>
         </div>
