Add inline onclick to login button

--- a/admin.html
+++ b/admin.html
@@ -182,7 +182,7 @@
         <div class="form-group">
             <input type="password" id="password" placeholder="Пароль" autocomplete="current-password">
         </div>
-        <button class="btn" id="loginBtn" type="button">🚀 Войти</button>
+        <button class="btn" id="loginBtn" type="button" onclick="login()">🚀 Войти</button>
     </div>
 
     <div id="adminPanel" class="hidden">
