--- a/admin.html
+++ b/admin.html
@@ -423,7 +423,7 @@
 <div style="margin-top:8px;"><div style="font-size:11px;color:#94a3b8;">Сумма вывода:</div><div style="font-size:18px;font-weight:900;color:#fff;">${Math.floor(r.amount||0).toLocaleString()} QuanHash ≈ $${(r.usdt_amount||0).toFixed(2)}</div></div>
 <div style="margin-top:8px;"><div style="font-size:11px;color:#94a3b8;">Адрес USDT (BEP20):</div><div style="font-family:monospace;font-size:11px;word-break:break-all;margin-top:4px;padding:8px;background:rgba(0,0,0,0.4);border-radius:8px;color:#a78bfa;">${r.address}</div></div>
 </div>
-${r.status==='pending'?'<div class="actions-grid"><button class="action-btn btn-success" onclick="processWithdrawal('+r.id+',\'completed\')">✅ Одобрить</button><button class="action-btn btn-danger" onclick="processWithdrawal('+r.id+',\'rejected\')">❌ Отклонить</button></div>':'<div style="padding:10px;background:rgba(16,185,129,0.2);border-radius:10px;color:#10b981;text-align:center;font-weight:700;">✅ Выполнено</div>'}`;
+${r.status==='pending'?`<div class="actions-grid"><button class="action-btn btn-success" data-rid="${r.id}" data-status="completed" onclick="processWithdrawalBtn(this)">✅ Одобрить</button><button class="action-btn btn-danger" data-rid="${r.id}" data-status="rejected" onclick="processWithdrawalBtn(this)">❌ Отклонить</button></div>`:`<div style="padding:10px;background:rgba(16,185,129,0.2);border-radius:10px;color:#10b981;text-align:center;font-weight:700;">✅ Выполнено</div>`}`;
                             c.appendChild(div);
                         });
                     });
@@ -431,7 +431,7 @@ ${r.status==='pending'?'<div class="actions-grid"><button class="action-btn btn-
             });
         }
         
-        function processWithdrawal(rid,status){fetch('/api/admin/process_withdrawal',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({request_id:rid,status:status})}).then(()=>{showNotification(status==='completed'?'✅ Одобрено':'❌ Отклонено');loadWithdrawals();}).catch(()=>showNotification('❌ Ошибка'));}
+        function processWithdrawalBtn(btn){const rid=btn.getAttribute('data-rid');const status=btn.getAttribute('data-status');fetch('/api/admin/process_withdrawal',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({request_id:rid,status:status})}).then(()=>{showNotification(status==='completed'?'✅ Одобрено':'❌ Отклонено');loadWithdrawals();}).catch(()=>showNotification('❌ Ошибка'));}
         
         function loadSettings(){
             document.getElementById('content').innerHTML=`<h2 style="color:#fff;font-size:20px;margin-bottom:20px;">⚙️ Настройки системы</h2>
